--- a/.github/workflows/my-actions.yml
+++ b/.github/workflows/my-actions.yml
@@ -10,12 +10,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v5
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: '3.12'
-        name: Set up Python
-      - uses: actions/checkout@v4
-        name: Check out code
-      - run: pip install -r requirements.txt
-        name: Install dependencies
+      - name: Clone project
+        uses: actions/checkout@v4
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run tests
