--- a/.github/workflows/my-actions.yml
+++ b/.github/workflows/my-actions.yml
@@ -19,3 +19,4 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests
+        run: echo "Run tests"
